--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ELO Estimator</title>
+    <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
 </head>
 <body>
     <h1>ELO Estimator</h1>
+    <table id="chessboard"></table>
 </body>
 </html>
