feat: add chess pieces

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <h1>ELO Estimator</h1>
-    <table id="chessboard"></table>
+    <div id="chessboard"></div>
 </body>
 </html>
