feat: make pieces movable

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <h1>ELO Estimator</h1>
-    <div id="chessboard"></div>
+    <div id="chessboard">
+        <div class="board"></div>
+        <img id="dragged"/>
+    </div>
 </body>
 </html>
