--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>ELO Estimator</title>
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="index.css">
+    <script src="base.js"></script>
     <script src="index.js"></script>
 </head>
 <body>
