feat: add pawn promotions

--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,27 @@
             <h2>History</h2>
         </div>
     </aside>
+    <div id="promotion-popup" class="popup">
+        <div class="container">
+            <div class="choices">
+                <button class="choice" data-piece="b">
+                    <img src="images/b.png" alt="bishop">
+                    <span>Bishop</span>
+                </button>
+                <button class="choice" data-piece="r">
+                    <img src="images/r.png" alt="rook">
+                    <span>Rook</span>
+                </button>
+                <button class="choice" data-piece="n">
+                    <img src="images/n.png" alt="knight">
+                    <span>Knight</span>
+                </button>
+                <button class="choice" data-piece="q">
+                    <img src="images/q.png" alt="queen">
+                    <span>Queen</span>
+                </button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
