--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,17 @@
                     <span>Queen</span>
                 </button>
             </div>
+            <button id="cancel-promotion-btn">Cancel</button>
+        </div>
+    </div>
+    <div id="game-over-popup" class="popup">
+        <div class="container">
+            <div class="outcome">
+                <div class="termination"></div>
+                <div class="result"></div>
+                <div class="winner"></div>
+            </div>
+            <button>Close</button>
         </div>
     </div>
 </body>
