feat: add elo estimation in UI

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,12 @@
             <h2>History</h2>
         </div>
     </aside>
+    <footer>
+        <div class="elo-estimation">
+            <h2>Your estimated ELO</h2>
+            <div id="estimated-elo">-</div>
+        </div>
+    </footer>
     <div id="promotion-popup" class="popup">
         <div class="container">
             <div class="choices">
