feat: integrate style analysis

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,13 @@
             <img id="dragged"/>
         </div>
     </main>
-    <aside id="sidebar">
+    <aside id="left-sidebar" class="left">
+        <div id="styles">
+            <h2>Your style</h2>
+            <table class="table"></table>
+        </div>
+    </aside>
+    <aside id="right-sidebar" class="right">
         <div id="config">
             <h2>Configuration</h2>
 
